--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -2,6 +2,8 @@
 
 <head th:fragment="head">
     <meta charset="UTF-8">
+    <meta name="_csrf" id="_csrf" th:content="${_csrf.token}"/>
+    <meta name="_csrf_header" id="_csrf_header" th:content="${_csrf.headerName}"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Fonts -->
@@ -89,7 +91,7 @@
         </div>
     </div>
     <!-- LOGIN_MODAL -->
-    <div class="modal fade" id="loginModal" sec:authorize="isAnonymous()" tabindex="-1"
+    <div class="modal fade fadeIn1 fadeInBottom" id="loginModal" sec:authorize="isAnonymous()" tabindex="-1"
          aria-labelledby="loginModal" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" style="max-width: 350px;">
             <!-- CONTENT -->
@@ -98,8 +100,8 @@
                 <div class="modal-body p-0">
                     <div class="card card-plain">
                         <div class="card-header pb-0 text-left">
-                            <h3 class="font-weight-bolder text-info text-gradient">잘 돌아오셨어요!</h3>
-                            <p class="mb-0">로그인 하시려면 이메일 또는 닉네임과 패스워드를 입력해주세요.</p>
+                            <h3 class="font-weight-bolder fadeIn5 fadeInBottom text-info text-gradient">잘 돌아오셨어요!</h3>
+                            <p class="mb-0 fadeIn5 fadeInBottom">로그인 하시려면 이메일 또는 닉네임과 패스워드를 입력해주세요.</p>
                         </div>
                     </div>
 
@@ -132,7 +134,7 @@
                                 <label class="form-check-label" for="remember-me">로그인 유지</label>
                             </div>
                             <div class="text-center">
-                                <button type="submit" class="btn bg-gradient-info w-100 mt-4 mb-0">Sign in</button>
+                                <button type="submit" class="btn bg-gradient-info w-100 mt-4 mb-0">로그인</button>
                             </div>
                         </form>
                     </div>
@@ -162,5 +164,24 @@
         }, false);
     }());
 </script>
+<!-- WAVE_ANIMATION -->
+<div th:fragment="wave-animation" class="position-absolute w-100 z-index-1 bottom-0">
+    <svg class="waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+         viewBox="0 24 150 40" preserveAspectRatio="none" shape-rendering="auto">
+        <defs>
+            <path id="gentle-wave"
+                  d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z"/>
+        </defs>
+        <g class="moving-waves">
+            <use xlink:href="#gentle-wave" x="48" y="-1" fill="rgba(255,255,255,0.40"/>
+            <use xlink:href="#gentle-wave" x="48" y="3" fill="rgba(255,255,255,0.35)"/>
+            <use xlink:href="#gentle-wave" x="48" y="5" fill="rgba(255,255,255,0.25)"/>
+            <use xlink:href="#gentle-wave" x="48" y="8" fill="rgba(255,255,255,0.20)"/>
+            <use xlink:href="#gentle-wave" x="48" y="13" fill="rgba(255,255,255,0.15)"/>
+            <use xlink:href="#gentle-wave" x="48" y="16" fill="rgba(255,255,255,0.95"/>
+        </g>
+    </svg>
+</div>
+
 
 </html>
