--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -37,7 +37,8 @@
                                            placeholder="Password"
                                            aria-describedby="passwordHelp" required/>
                                     <small id="passwordHelp" class="form-text text-muted">
-                                        패스워드가 기억나지 않는다면, <strong><a href="#" th:href="@{/email-login}">패스워드 없이 로그인하기</a></strong>
+                                        비밀번호가 기억나지 않는다면, <strong><a href="#"
+                                                                    th:href="@{/reset-password}">비밀번호 변경하기</a></strong>
                                     </small>
                                     <small class="invalid-feedback">패스워드를 입력하세요.</small>
                                 </div>
@@ -69,7 +70,6 @@
             </div>
         </div>
     </div>
-    <footer th:replace="fragments.html::footer"></footer>
 </section>
 </body>
 
